--- a/index.html
+++ b/index.html
@@ -25,6 +25,114 @@
     <title>PlayStation</title>
 </head>
 <body>
+    <header>
+        <div class="top-header bg-dark text-end">
+            <div class="container-fluid">
+                <img src="img/sony_logo.svg" alt="logo" id="sony-logo" class="py-3">
+            </div>
+        </div>
+        <div class="bottom-header">
+            <nav class="navbar navbar-expand-lg bg-white">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#">
+                    <img src="img/play_logo.svg" alt="play_logo">
+                  </a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbargiochi" role="button" data-bs-toggle="giochi" aria-expanded="false">
+                          Giochi
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbargiochi">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarhardware" role="button" data-bs-toggle="hardware" aria-expanded="false">
+                          Hardware
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarhardware">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarservizi" role="button" data-bs-toggle="servizi" aria-expanded="false">
+                          Servizi
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarserivizi">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarnovità" role="button" data-bs-toggle="novità" aria-expanded="false">
+                          Novità
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarnovità">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbaracquisti" role="button" data-bs-toggle="acquisti" aria-expanded="false">
+                          Fai Acquisti
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbaracquisti">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarsupporto" role="button" data-bs-toggle="supporto" aria-expanded="false">
+                          Supporto
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarsupporto">
+                          <li><a class="dropdown-item" href="#">Action</a></li>
+                          <li><a class="dropdown-item" href="#">Another action</a></li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <div class="d-flex align-items-center" role="search">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle fw-bold text-black" href="#" id="navbarmyplay" role="button" data-bs-toggle="myplay" aria-expanded="false">
+                                  My PlayStation
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarmyplay">
+                                  <li><a class="dropdown-item" href="#">Action</a></li>
+                                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                                  <li><hr class="dropdown-divider"></li>
+                                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                </ul>
+                              </li>
+                        </ul>
+                        <button class="btn btn-secondary rounded-pill fw-bold mx-3" type="button">Accedi</button>
+                        <a class="navbar-brand" href="#">
+                            <img src="img/lens.svg" alt="lens-logo" class="w-75">
+                        </a>
+                    </div>
+                  </div>
+                </div>
+            </nav>   
+        </div>
+    </header>
     
 </body>
 </html>
