Added section jumbotron

--- a/index.html
+++ b/index.html
@@ -133,6 +133,27 @@
             </nav>   
         </div>
     </header>
+
+    <main>
+        <section id="jumbotron">
+            <div class="bg-returnal">
+                <div class="container-fluid px-5">
+                    <div class="row align-items-end my-row">
+                        <div class="col-12 col-lg-4">
+                            <img src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" class="w-75 mb-4">
+                            <h2 class="text-white mb-4">Rompi il cerchio</h2>
+                            <p class="text-white mb-4">
+                                Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su P55.
+                            </p>
+                            <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
+    </main>
     
 </body>
 </html>
