--- a/index.html
+++ b/index.html
@@ -152,7 +152,30 @@
             </div>
         </section>
 
-        
+        <section id="card-jumbotron">
+            <div class="container-fluid p-5">
+                <div class="row">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded border border-primary">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
