--- a/index.html
+++ b/index.html
@@ -153,25 +153,78 @@
         </section>
 
         <section id="card-jumbotron">
-            <div class="container-fluid p-5">
+            <div class="container-fluid px-5">
+                <div class="row py-5 justify-content-between ">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1 border border-primary rounded-4">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="play5">
+            <div class="container-fluid px-5">
+                <div class="text-center mb-5">
+                    <span class="text-primary">PLAY HAS NO LIMITS</span>
+                    <h2 class="mb-3">Ecco la PlayStation 5</h2>
+                    <span class="text-secondary">Tuffati in nuove possibiltà di gioco complatamente inaspettate</span>
+                </div>
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-3 col-lg-4">
+                        <h2 class="mb-3">Console PlayStation 5</h2>
+                        <span class="text-secondary d-block mb-3">Sperimenta la nuova generazione di incredibili giochi playstation</span>
+                        <button type="button" class="btn btn-primary rounded-pill">Maggiori informazioni</button>
+                    </div>
+                    <div class="col-12 col-md-9 col-lg-8">
+                        <img src="img/playstation-5-thumb.png" alt="" class="play-5">
+                    </div>
+                </div>
                 <div class="row">
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded border border-primary">
+                    <div class="col-sm-4 col-md">
+                        <div class="text-center">
+                            <img src="img/playstation-5-thumb.png" alt="" class="w-75">
+                            <span class="d-none d-md-block mb-2">Console PS5</span>
+                            <hr class="border-primary opacity-75">
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    <div class="col-sm-4 col-md">
+                        <div class="text-center">
+                            <img src="img/joypad-thumb.png" alt="" class="w-75">
+                            <span class="d-none d-md-block">Controller wireless DualSense<sup>TM</sup></span>
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded">
+                    <div class="col-sm-4 col-md">
+                        <div class="text-center">
+                            <img src="img/headset-thumb.png" alt="" class="w-75">
+                            <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<sup>TM</sup></span>
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    <div class="col-sm-4 col-md">
+                        <div class="text-center">
+                            <img src="img/remote-thumb.png" alt="" class="w-75">
+                            <span class="d-none d-md-block">Telecomando Media</span>
+                        </div>
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="rounded card-rounded">
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2">
-                        <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="rounded card-rounded">
+                    <div class="col-sm-4 col-md">
+                        <div class="text-center">
+                            <img src="img/camera-thumb.jpg" alt="" class="w-75">
+                            <span class="d-none d-md-block">Telecamera HD</span>
+                        </div>
                     </div>
                 </div>
             </div>
