--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                     <div class="row align-items-end my-row">
                         <div class="col-12 col-lg-4">
                             <img src="img/returnal-hero-banner-logo.png" alt="returnal-hero-banner-logo" class="w-75 mb-4">
-                            <h2 class="text-white mb-4">Rompi il cerchio</h2>
-                            <p class="text-white mb-4">
+                            <h1 class="text-white mb-4">Rompi il cerchio</h1>
+                            <p class="text-white mb-4 fs-5">
                                 Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su P55.
                             </p>
                             <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
@@ -155,22 +155,22 @@
         <section id="card-jumbotron">
             <div class="container-fluid px-5">
                 <div class="row py-5 justify-content-between ">
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1 border border-primary rounded-4">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2 border border-2 border-primary rounded-4">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
                         <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
                         <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
                         <img src="img/returnal-listing-thumb-01-ps5.jpg" alt="" class="w-100 rounded-4">
                     </div>
-                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-1">
+                    <div class="col-6 col-sm-4 col-lg-2 mb-2 p-2">
                         <img src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="" class="w-100 rounded-4">
                     </div>
                 </div>
@@ -181,20 +181,20 @@
             <div class="container-fluid px-5">
                 <div class="text-center mb-5">
                     <span class="text-primary">PLAY HAS NO LIMITS</span>
-                    <h2 class="mb-3">Ecco la PlayStation 5</h2>
+                    <h2 class="mb-4">Ecco la PlayStation 5</h2>
                     <span class="text-secondary">Tuffati in nuove possibiltà di gioco complatamente inaspettate</span>
                 </div>
                 <div class="row align-items-center">
                     <div class="col-12 col-md-3 col-lg-4">
-                        <h2 class="mb-3">Console PlayStation 5</h2>
-                        <span class="text-secondary d-block mb-3">Sperimenta la nuova generazione di incredibili giochi playstation</span>
+                        <h2 class="mb-4">Console PlayStation 5</h2>
+                        <span class="text-secondary d-block mb-4">Sperimenta la nuova generazione di incredibili giochi playstation</span>
                         <button type="button" class="btn btn-primary rounded-pill">Maggiori informazioni</button>
                     </div>
                     <div class="col-12 col-md-9 col-lg-8">
                         <img src="img/playstation-5-thumb.png" alt="" class="play-5">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-5">
                     <div class="col-sm-4 col-md">
                         <div class="text-center">
                             <img src="img/playstation-5-thumb.png" alt="" class="w-75">
@@ -202,28 +202,45 @@
                             <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md">
+                    <div class="col-sm-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/joypad-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Controller wireless DualSense<sup>TM</sup></span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md">
+                    <div class="col-sm-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/headset-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<sup>TM</sup></span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md">
+                    <div class="col-sm-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/remote-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecomando Media</span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md">
+                    <div class="col-sm-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/camera-thumb.jpg" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecamera HD</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="jumbotron-middle-page">
+            <div class="bg-it-take-two">
+                <div class="container-fluid px-5">
+                    <div class="row py-5">
+                        <div class="col-12 col-lg-4">
+                            <img src="img/it-takes-two-logo.png" alt="" class="w-75 mb-4">
+                            <h1 class="text-white mb-4">Un'avventura cooperativa selvaggia ti attende</h1>
+                            <p class="text-white mb-4 fs-5">
+                                Trova un amico e partite insieme per l'avventurapiù folle delle vostre vile in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genera. 
+                            </p>
+                            <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
                         </div>
                     </div>
                 </div>
