--- a/index.html
+++ b/index.html
@@ -195,32 +195,32 @@
                     </div>
                 </div>
                 <div class="row mb-5">
-                    <div class="col-sm-4 col-md">
+                    <div class="col-4 col-md">
                         <div class="text-center">
                             <img src="img/playstation-5-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block mb-2">Console PS5</span>
                             <hr class="border-primary opacity-75">
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md opacity-50">
+                    <div class="col-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/joypad-thumb.png" alt="" class="w-75">
-                            <span class="d-none d-md-block">Controller wireless DualSense<sup>TM</sup></span>
+                            <span class="d-none d-md-block">Controller wireless DualSense<sup class="sup-tm">TM</sup></span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md opacity-50">
+                    <div class="col-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/headset-thumb.png" alt="" class="w-75">
-                            <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<sup>TM</sup></span>
+                            <span class="d-none d-md-block">Cuffie wireless con microfono PULSE 3<sup class="sup-tm">TM</sup></span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md opacity-50">
+                    <div class="col-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/remote-thumb.png" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecomando Media</span>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md opacity-50">
+                    <div class="col-4 col-md opacity-50">
                         <div class="text-center">
                             <img src="img/camera-thumb.jpg" alt="" class="w-75">
                             <span class="d-none d-md-block">Telecamera HD</span>
@@ -241,6 +241,67 @@
                                 Trova un amico e partite insieme per l'avventurapiù folle delle vostre vile in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genera. 
                             </p>
                             <button type="button" class="btn btn-danger rounded-pill mb-4">Acquista ora</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="nuove-uscite">
+            <div class="bg-dark-grey">
+                <div class="container-fluid p-5">
+                    <h2 class="text-white fw-bold mb-3">Nuove uscite</h2>
+                    <h4 class="text-white fw-bold mb-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+                    <div class="row">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Tony Hawk's<sup class="sup-tm">TM</sup> Pro Skater<sup class="sup-tm">TM</sup> 1 + 2 </span>
+                        </div>
+                        <div class="col-6 col-sm-4 col-lg-2 mb-5">
+                            <img src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="" class="w-100 rounded-4 mb-2">
+                            <span class="d-block text-white fs-5">Crash Bandicoot 4: it's About Time</span>
                         </div>
                     </div>
                 </div>
