--- a/index.html
+++ b/index.html
@@ -307,6 +307,36 @@
                 </div>
             </div>
         </section>
+
+        <section class="play4">
+            <div class="container-fluid p-5">
+                <div class="text-center mb-5">
+                    <h2 class="mb-4">Esplora PlayStation 4</h2>
+                    <span class="text-secondary d-block">Giochi incredibili e intrattenimento senza fine.</span>
+                    <span class="text-secondary d-block mb-5">Non c'è mai stato un momento migliore per giocare sulla tua PS4. </span>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/ps4-slim-homepage-image-block.jpg" alt="" class="w-100">
+                        <h2 class="mb-3">PlayStation 4 </h2>
+                        <span class="text-secondary fs-5 mb-3 d-block">Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</span>
+                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/double11-202010-tw-psvr.jpg" alt="" class="w-100">
+                        <h2 class="mb-3">PlayStation VR Accessori </h2>
+                        <span class="text-secondary fs-5 mb-3 d-block">Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</span>
+                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                    </div>
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/dualshock-4-listing-thumb.jpg" alt="" class="w-100">
+                        <h2 class="mb-3">Accessori</h2>
+                        <span class="text-secondary fs-5 mb-3 d-block">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</span>
+                        <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
