--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </div>
         </section>
 
-        <section class="play4">
+        <section id="play4">
             <div class="container-fluid p-5">
                 <div class="text-center mb-5">
                     <h2 class="mb-4">Esplora PlayStation 4</h2>
@@ -333,6 +333,25 @@
                         <h2 class="mb-3">Accessori</h2>
                         <span class="text-secondary fs-5 mb-3 d-block">Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</span>
                         <button type="button" class="btn btn-primary rounded-pill">Scopri di più</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="playstation-plus">
+            <div class="bg-grey">
+                <div class="container-fluid px-5">
+                    <div class="row align-items-center">
+                        <div class="col-12 py-5 col-md-6 py-md-0">
+                            <img src="img/ps-plus-logo.png" alt="" class="w-50 mb-4">
+                            <p>
+                                Migliora la tua esperienza PlayStation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora. 
+                            </p>
+                            <button type="button" class="btn my-btn rounded-pill fw-bold">Scopri di più</button>
+                        </div>
+                        <div class="d-none d-md-block col-md-6">
+                            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="w-100">
+                        </div>
                     </div>
                 </div>
             </div>
