Added section discount

--- a/index.html
+++ b/index.html
@@ -356,6 +356,26 @@
                 </div>
             </div>
         </section>
+
+        <section id="sconto">
+            <div class="container-fluid p-5">
+                <div class="text-center mb-5">
+                    <h2 class="mb-4">Nuovi sconti sul PlayStation Store</h2>
+                    <span class="text-secondary d-block mb-5">Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto. </span>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/playstation-store-games-under-20-spotlight.jpg" alt="" class="w-100">
+                    </div>
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="" class="w-100">
+                    </div>
+                    <div class="col-12 col-md-4 mb-4">
+                        <img src="img/playstation-store-free-to-play-spotlight.png" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
