--- a/index.html
+++ b/index.html
@@ -376,6 +376,25 @@
                 </div>
             </div>
         </section>
+
+        <section id="playstation-now">
+            <div class="bg-dark-blue">
+                <div class="container-fluid px-5">
+                    <div class="row align-items-center">
+                        <div class="col-12 py-5 col-md-6 py-md-0">
+                            <img src="img/ps-now-logo-two-column.png" alt="" class="w-50 mb-4">
+                            <p class="text-white">
+                                Ottieni l'accesso immediato a una vastissima raccolta di citai 800 giochi per P54, PS3 e PS2 su P54 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                            </p>
+                            <button type="button" class="btn btn-light rounded-pill fw-bold">Esplora PlayStation Now</button>
+                        </div>
+                        <div class="d-none d-md-block col-md-6">
+                            <img src="img/ps-now-april-featured-image-block.png" alt="" class="w-100">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
