Added section social

--- a/index.html
+++ b/index.html
@@ -395,6 +395,28 @@
                 </div>
             </div>
         </section>
+
+        <section id="social">
+            <div class="container-fluid p-5">
+                <div class="text-center">
+                    <h2 class="mb-5">Seguici sui social media</h2>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-6 col-sm-3 col-lg-2 mb-4">
+                        <img src="img/twitter.jpg" alt="" class="w-100">
+                    </div>
+                    <div class="col-6 col-sm-3 col-lg-2 mb-4 ">
+                        <img src="img/facebook.jpg" alt="" class="w-100">
+                    </div>
+                    <div class="col-6 col-sm-3 col-lg-2  mb-4 ">
+                        <img src="img/instagram.jpg" alt="" class="w-100">
+                    </div>
+                    <div class="col-6 col-sm-3 col-lg-2  mb-4">
+                        <img src="img/youtube.png" alt="" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     
 </body>
