Added section footer

--- a/index.html
+++ b/index.html
@@ -419,5 +419,57 @@
         </section>
     </main>
     
+    <footer>
+        <div class="container-fluid p-5">
+            <div class="row">
+                <div class="col-12 col-lg-6 mb-5">
+                    <img src="img/ps-footer.svg" alt="" class="w-25 mb-4 d-block">
+                    <i class="bi bi-globe text-white me-2"></i>
+                    <span class="text-white fw-blod">Country / Region: Italy</span>
+                </div>
+                <div class="col-12 col-lg-6 mb-5">
+                    <div class="row">
+                        <div class="col-12 col-md-4">
+                            <ul class="text-white list-unstyled">
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="text-white list-unstyled">
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                            </ul>
+                        </div>
+                        <div class="col-12 col-md-4">
+                            <ul class="text-white list-unstyled">
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                                <li>Link footer</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6">
+                   <img src="img/sie-logo.svg" alt="" class="w-25 mb-3"> 
+                   <p class="text-white">
+                    Wetatite 02021 Sony Interactive Entedainment Europa Limited. Tutti i contenuti, nomi dei giochi, 
+                    nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o 
+                    materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati.
+                    <a href="#" class="text-white">Maggiori info</a> 
+                   </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
