--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
                                 <a href="#" class="btn my-btn fw-bold rounded-pill m-1">Esplora PlayStation Plus</a>
                             </div>
                         </div>
-                        <div class="d-none d-md-block col-md-6">
-                            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="w-100">
+                        <div class="col-md-6">
+                            <img src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="" class="w-100 d-none d-md-block">
                         </div>
                     </div>
                 </div>
@@ -412,8 +412,8 @@
                                 <a href="#" class="btn btn-light fw-bold rounded-pill m-1">Esplora PlayStation Now</a>
                             </div>
                         </div>
-                        <div class="d-none d-md-block col-md-6">
-                            <img src="img/ps-now-april-featured-image-block.png" alt="" class="w-100">
+                        <div class="col-md-6">
+                            <img src="img/ps-now-april-featured-image-block.png" alt="" class="w-100 d-none d-md-block">
                         </div>
                     </div>
                 </div>
